--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@patternfly/react-core": "^5.4.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.8.0",
+    "@react-navigation/drawer": "^6.7.2",
     "@tanstack/react-query": "^5.56.2",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
     "expo-clipboard": "^6.0.3",
     "expo-image": "~1.12.15",
     "expo-linear-gradient": "^13.0.2",
