changes for railway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ services:
     build: .
     ports:
       - "5001:5001"
-    volumes:
-      - .:/app
     environment:
-      FLASK_ENV: development
+      FLASK_ENV: production 
     command: python3 app.py
     platform: linux/amd64
     depends_on:
@@ -15,8 +13,6 @@ services:
 
   selenium:
     image: selenium/standalone-chrome:latest
-    shm_size: '2gb'  # Increase shared memory size for Chrome
-    mem_limit: 3221225472
     environment:
       - START_XVFB=false
       - SE_NODE_MAX_SESSIONS=10
