--- a/package.json
+++ b/package.json
@@ -5,24 +5,26 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo build:web",
+    "web-build": "npm run web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@patternfly/react-core": "^5.4.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-picker/picker": "^2.8.0",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.7.2",
     "@tanstack/react-query": "^5.56.2",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
+    "expo": "~51.0.36",
     "expo-asset": "~10.0.10",
     "expo-clipboard": "^6.0.3",
-    "expo-image": "~1.12.15",
+    "expo-image": "~1.13.0",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
@@ -30,15 +32,16 @@
     "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "shadowlist": "^0.4.5",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "react-dom": "18.2.0"
   },
   "private": true,
   "devDependencies": {
